# autoinput

./: LICENSE  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CompactDot.tsx  ConfigForm.tsx  HotkeyGrid.tsx  KeyCapture.tsx  VirtualJoystick.tsx
src/components/ui/: button.tsx  input.tsx  select.tsx
src/hooks/: use-action-control.ts  use-hotkeys.ts  use-latest.ts  use-persisted-settings.ts
src/lib/: constants.ts  queries.ts  router.tsx  store.ts
src/routes/: add.tsx  edit.tsx  home.tsx
src/types/: settings.ts
